--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/exo-2": "^5.1.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.8",
     "react": "^18.3.1",
