--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/exo-2": "^5.1.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.8",
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
